safari scrollbar fix

--- a/public/css/servant-profile.css
+++ b/public/css/servant-profile.css
@@ -9,6 +9,7 @@
 }
 
 ::-webkit-scrollbar {
+    -webkit-appearance:  none;
     width: 22px;
 }
 ::-webkit-scrollbar-track {
